Right align "labels" in issues#show template
In order to target these elements we group things using "thead" and
"tbody"; this allows us to distinguish between tables with the header
elements on the left (like in issues#show) and tables with the header
along the top (like in issues#index).

Note the secondary benefit here: in our issues#index we now get a
noticeable visual separation between header and the rest of the table.

--- a/app/views/sass/display.sass
+++ b/app/views/sass/display.sass
@@ -375,6 +375,14 @@ div.column
 
 // tables
 
+// tables with header cells on the left
+table tbody tr th
+  text-align: right
+
+// tables with header cells along the top
+table thead tr th
+  text-align: center
+
 table.main
   width:            95%
   input[type=text]
